...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter X from 0 to 5" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NeW-Je-oqC">
                                        <rect key="frame" x="25" y="0.0" width="113" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="textFieldXIdentifier"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="B3v-CO-KoW"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter Y from 0 to 5" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZYC-xg-4bM">
                                        <rect key="frame" x="252" y="0.0" width="113" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="textFieldYIdentifier"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
...
                                        <segments>
                                            <segment title="North"/>
                                            <segment title="East"/>
                                            <segment title="South"/>
                                            <segment title="West"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILZ-LN-TBG" customClass="RounderCornerButton" customModule="MarsRover" customModuleProvider="target">
                                        <rect key="frame" x="8" y="46" width="107.33333333333333" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonLeftIdentifier"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="VM6-Pb-wUX"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTo-LE-GS1" customClass="RounderCornerButton" customModule="MarsRover" customModuleProvider="target">
                                        <rect key="frame" x="133.33333333333334" y="46" width="107.33333333333334" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonRightIdentifier"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="CsL-qD-3jW"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRy-p0-ozI" customClass="RounderCornerButton" customModule="MarsRover" customModuleProvider="target">
                                        <rect key="frame" x="258.66666666666669" y="46" width="107.33333333333331" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonMoveIdentifier"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="x3b-yZ-J5i"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWV-53-aiP" customClass="RounderCornerButton" customModule="MarsRover" customModuleProvider="target">
                                        <rect key="frame" x="8" y="92" width="358" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonDoneIdentifier"/>
                                        <state key="normal" title="Done"/>
                                        <userDefinedRuntimeAttributes>
...
